Increased heap size for integration tests.