@@ -414,7 +414,10 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>2.17</version>  
+                        <version>2.17</version>
+                        <configuration>
+                            <argLine>-Xmx768m -XX:MaxPermSize=256m</argLine>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>integration-test</id>
